# sdleditor

./: Cargo.toml  LICENSE  README.md
another/src/: main.rs
c/: Makefile  a.out  editor.c  editor.h
last/: Cargo.toml  Makefile  buffer.h
last/src/: main.rs
src/: application.rs  buffer.rs  canvas.rs  file_manager.rs  main.rs  pane.rs  project_manager.rs
texture_playground/: Cargo.toml  editor.c
texture_playground/src/: main.rs
win32/: build.bat  main.cpp
