[package]
name = "sdleditor"
version = "0.1.0"
authors = ["Paul Page <pjpage98@gmail.com>"]
edition = "2018"

[dependencies]

clipboard = "0.5.0"
unicode-segmentation = "1.3.0"
regex = "1.3.6"
rusttype = "0.9.2"

[dependencies.sdl2]
version = "0.35.1"
default-features = false
features = ["ttf", "unsafe_textures"]
